// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders 1`] = `
<button
  class="sc-bcHOTY sc-gsMHZj euRmZz fayzeR"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  class="sc-bcHOTY sc-gsMHZj fmkkak fayzeR"
>
  foo
</button>
`;
